--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Hello world</h1>
     <script src="./index.js"></script>
+    <script src="./objects.js"></script>
 </body>
 
 </html>
