--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Hello world</h1>
     <script src="./index.js"></script>
     <script src="./objects.js"></script>
+    <script src="./arrays.js"></script>
 </body>
 
 </html>
